added project properties to override the defaults from the applied bintrayPublishing.gradle file

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,8 @@
 grailsVersion=3.0.2
 gradleWrapperVersion=2.3
+
+repo=plugins
+userOrg=gregopet
+websiteUrl=https://github.com/gregopet/grails-json-apis
+issueTrackerUrl=https://github.com/gregopet/grails-json-apis/issues
+vcsUrl=https://github.com/gregopet/grails-json-apis
