--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,11 @@ buildscript {
 }
 
 plugins {
-    id "io.spring.dependency-management" version "0.5.1.RELEASE"
-    id "com.jfrog.bintray" version "1.1"
+    id "io.spring.dependency-management" version "1.0.10.RELEASE"
 }
 
 
-version "0.98"
+version "0.99"
 group "org.grails.plugins"
 
 apply plugin: 'maven-publish'
@@ -29,7 +28,6 @@ apply plugin: "org.grails.grails-plugin"
 apply plugin: "org.grails.grails-gsp"
 // Used for publishing to central repository, remove if not needed
 //apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/grailsCentralPublishing.gradle'
-//apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/bintrayPublishing.gradle'
 
 ext {
     grailsVersion = project.grailsVersion
@@ -63,14 +61,9 @@ dependencies {
     provided "org.grails:grails-dependencies"
     provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-//    testCompile "org.grails:grails-plugin-testing"
-//    testCompile "org.grails:grails-gorm-testing-support"
+    testCompile "org.grails:grails-gorm-testing-support"
 
     console "org.grails:grails-console"
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = gradleWrapperVersion
 }
 
 jar {
